<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.barnetapp.barnet.presentation.view.ChatRoomsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:id="@+id/chat_room"
                android:divider="@color/colorPrimary"/>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom|center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom|center"
                android:weightSum="1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/chat_mensaje"
                    android:inputType="text"
                    android:layout_weight="0.9"
                    android:id="@+id/chat_room_mensaje"/>

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/chat_btn_enviar"
                    android:textColor="@color/blanco"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_facebook_likeboxcountview_text_color"
                android:text="@string/chat_btn_invite"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>


        </LinearLayout>



    </FrameLayout>


</RelativeLayout>
